It seems like adding `scrollbar-gutter` does not play nice with React Aria's modals/popovers, another approach is to set `overflow-y: scroll` to the <html> element, this reserves a space for the scrollbar, thus preventing unwanted layout changes. However, this does not look visually appealing, but we can easily fix that by customizing the styles of the scrollbar.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,8 +55,24 @@
     --input: 57 49 75;
   }
 
-  html {
-    scrollbar-gutter: stable;
+  /* width */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgb(var(--background));
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(var(--muted));
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(var(--muted-foreground));
   }
 }
 
